# vysted-terminal

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  BLOCKERS-A.md  BLOCKERS-B.md  BLOCKERS-C.md  BLOCKERS-I.md  BLOCKERS-M.md  BLOCKERS-N.md  BLOCKERS-chart.md  BLOCKERS-news.md  BLOCKERS.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  PHASE_0_HANDOFF.md  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
docs/: BLUEPRINT.md  BROKER_INTEGRATIONS.md  MCP_INTEGRATION.md  PHASE_2_HANDOFF.md  PHASE_3_HANDOFF.md  PHASE_4_HANDOFF.md  PHASE_5_HANDOFF.md  PHASE_6.5_HANDOFF.md  PHASE_6_HANDOFF.md  PHASE_7_HANDOFF.md  PHASE_8_BUG_CATALOG.md  PHASE_8_COVERAGE_AND_DOCS_AUDIT.md  PHASE_8_GATE_VERIFICATION.md  PHASE_8_HANDOFF.md  PHASE_8_PERF_BASELINE.md  PHASE_8_PLUGIN_AUDIT.md  PHASE_8_RUST_AUDIT.md  PHASE_8_SIDECAR_AUDIT.md  PHASE_8_VISUAL_REGRESSION_REPORT.md  PLUGIN_DEVELOPMENT.md  SAFETY_ARCHITECTURE.md  SIDECAR_API.md
scripts/: ensure-all-sidecars.mjs  ensure-openbb-mcp-sidecar.mjs  ensure-openbb-sidecar.mjs  ensure-sec-edgar-mcp-sidecar.mjs  ensure-sidecar.mjs  render_phase_6_e_screenshots.py  render_phase_6_sc_screenshots.py  smoke-test-sidecars.mjs
sidecar/: app.py  config.py  conftest.py  main.py  requirements-dev.txt  requirements.txt  ruff.toml  test_health.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keychain.rs  kill_switch.rs  lib.rs  main.rs  openbb_mcp.rs  sec_edgar_mcp.rs
styles/: tokens.css
(+525 files in other folders)
