[package]
name = "vysted-terminal"
version = "0.6.1"
description = "Vysted Terminal — open-source AI-native finance terminal."
authors = ["Lokavya <commercial@vysted.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "vysted_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
